Found a way to connect UC to main form. Wohooo! Let's goooooo! <3

--- a/SRScenarioCreatorEnhanced.csproj
+++ b/SRScenarioCreatorEnhanced.csproj
@@ -57,7 +57,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ScenarioClass.cs" />
+    <Compile Include="GlobalsList.cs" />
     <Compile Include="UserControls\UC_Scenario.cs">
       <SubType>UserControl</SubType>
     </Compile>
