--- a/SRScenarioCreatorEnhanced.csproj
+++ b/SRScenarioCreatorEnhanced.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="UserControls\UC_Orbat.resx">
       <DependentUpon>UC_Orbat.cs</DependentUpon>
@@ -151,6 +152,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\SReditorIcon.png" />
+    <None Include="Resources\eightPic.jpg" />
+    <None Include="Resources\appInfoIcon2smaller.png" />
+    <None Include="Resources\appExitIcon.png" />
     <Content Include="SReditorIcon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
