--- a/SRScenarioCreatorEnhanced.csproj
+++ b/SRScenarioCreatorEnhanced.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GlobalsList.cs" />
+    <Compile Include="ScenarioContent.cs" />
     <Compile Include="UserControls\UC_Orbat.cs">
       <SubType>UserControl</SubType>
     </Compile>
