--- a/SRScenarioCreatorEnhanced.csproj
+++ b/SRScenarioCreatorEnhanced.csproj
@@ -48,7 +48,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>SReditorIcon.ico</ApplicationIcon>
+    <ApplicationIcon>
+    </ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <TargetZone>LocalIntranet</TargetZone>
@@ -76,16 +77,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="editorMainWindow.cs">
+    <Compile Include="Forms\editorMainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="editorMainWindow.Designer.cs">
+    <Compile Include="Forms\editorMainWindow.Designer.cs">
       <DependentUpon>editorMainWindow.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
+    <Compile Include="src\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="GlobalsList.cs" />
-    <Compile Include="ScenarioContent.cs" />
+    <Compile Include="src\GlobalsList.cs" />
+    <Compile Include="src\ScenarioContent.cs" />
     <Compile Include="UserControls\UC_Orbat.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -128,7 +129,7 @@
     <Compile Include="UserControls\UC_WM.Designer.cs">
       <DependentUpon>UC_WM.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="editorMainWindow.resx">
+    <EmbeddedResource Include="Forms\editorMainWindow.resx">
       <DependentUpon>editorMainWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -182,7 +183,6 @@
     <None Include="Resources\eightPic.jpg" />
     <None Include="Resources\appInfoIcon2smaller.png" />
     <None Include="Resources\appExitIcon.png" />
-    <Content Include="SReditorIcon.ico" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
