--- a/SRScenarioCreatorEnhanced.csproj
+++ b/SRScenarioCreatorEnhanced.csproj
@@ -86,6 +86,7 @@
     <Compile Include="src\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\GlobalsList.cs" />
+    <Compile Include="src\RegionsContent.cs" />
     <Compile Include="src\ScenarioContent.cs" />
     <Compile Include="src\SettingsContent.cs" />
     <Compile Include="UserControls\UC_Orbat.cs">
