--- a/SRScenarioCreatorEnhanced.csproj
+++ b/SRScenarioCreatorEnhanced.csproj
@@ -96,6 +96,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\aboutWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\aboutWindow.Designer.cs">
+      <DependentUpon>aboutWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\editorMainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -156,6 +162,9 @@
     <Compile Include="UserControls\UC_WM.Designer.cs">
       <DependentUpon>UC_WM.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Forms\aboutWindow.resx">
+      <DependentUpon>aboutWindow.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\editorMainWindow.resx">
       <DependentUpon>editorMainWindow.cs</DependentUpon>
     </EmbeddedResource>
